# hello23

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cmake/toolchains/: macos26-gcc15.cmake
